pddl/grammar/pddl22Parser.py
# Generated from pddl22.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pddl22Parser ( Parser ):

    grammarFileName = "pddl22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'(define'", "'('", "'domain'", "')'", 
                     "'(:requirements'", "':strips'", "':typing'", "':negative-preconditions'", 
                     "':disjunctive-preconditions'", "':equality'", "':existential-preconditions'", 
                     "':universal-preconditions'", "':quantified-preconditions'", 
                     "':conditional-effects'", "':fluents'", "':adl'", "':durative-actions'", 
                     "':duration-inequalities'", "':continuous-effects'", 
                     "':derived-predicates'", "':timed-initial-literals'", 
                     "':preferences'", "':constraints'", "'(:types'", "'-'", 
                     "'(either'", "'(:constants'", "'(:predicates'", "'(:functions'", 
                     "'(:action'", "':parameters ('", "':precondition'", 
                     "':effect'", "'()'", "'(and'", "'(or'", "'(not'", "'(imply'", 
                     "'(exists'", "'(forall'", "'>'", "'<'", "'>='", "'<='", 
                     "'+'", "'*'", "'/'", "'(when'", "'assign'", "'scale-up'", 
                     "'scale-down'", "'increase'", "'decrease'", "'(:durative-action'", 
                     "':duration'", "':condition'", "'?duration'", "'(at'", 
                     "'='", "'(over'", "'start'", "'end'", "'all'", "'(-'", 
                     "'#t)'", "'#t'", "'(:derived'", "'problem'", "'(:domain'", 
                     "'(:objects'", "'(:init'", "'(:goal'", "'(:metric'", 
                     "'minimize'", "'maximize'", "'total-time'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VARIABLE", "NAME", "NUMBER", "COMMENT", 
                      "WS" ]

    RULE_pddl_file = 0
    RULE_domain = 1
    RULE_require_def = 2
    RULE_require_key = 3
    RULE_types_def = 4
    RULE_untyped_type_list = 5
    RULE_typed_type_list = 6
    RULE_pddl_type = 7
    RULE_constants_def = 8
    RULE_untyped_name_list = 9
    RULE_typed_name_list = 10
    RULE_predicates_def = 11
    RULE_atomic_formula_skeleton = 12
    RULE_untyped_var_list = 13
    RULE_typed_var_list = 14
    RULE_functions_def = 15
    RULE_action_def = 16
    RULE_goal_descriptor = 17
    RULE_atomic_formula = 18
    RULE_term_list = 19
    RULE_term = 20
    RULE_function_comparison = 21
    RULE_binary_comparison = 22
    RULE_expression = 23
    RULE_binary_operator = 24
    RULE_effect = 25
    RULE_c_effect = 26
    RULE_conditional_effect = 27
    RULE_p_effect = 28
    RULE_assign_operator = 29
    RULE_durative_action_def = 30
    RULE_duration_constraint = 31
    RULE_simple_duration_constraint = 32
    RULE_duration_op = 33
    RULE_durative_action_goal_descriptor = 34
    RULE_timed_goal_descriptor = 35
    RULE_time_specifier_prefix = 36
    RULE_time_specifier = 37
    RULE_durative_action_effect = 38
    RULE_timed_effect = 39
    RULE_function_assign_durative = 40
    RULE_expression_durative = 41
    RULE_assign_op_t = 42
    RULE_expression_t = 43
    RULE_derived_predicate_def = 44
    RULE_problem = 45
    RULE_object_declaration = 46
    RULE_init = 47
    RULE_init_element = 48
    RULE_goal = 49
    RULE_metric_spec = 50
    RULE_optimization = 51
    RULE_ground_function_expression = 52
    RULE_variable = 53
    RULE_name = 54
    RULE_number = 55

    ruleNames =  [ "pddl_file", "domain", "require_def", "require_key", 
                   "types_def", "untyped_type_list", "typed_type_list", 
                   "pddl_type", "constants_def", "untyped_name_list", "typed_name_list", 
                   "predicates_def", "atomic_formula_skeleton", "untyped_var_list", 
                   "typed_var_list", "functions_def", "action_def", "goal_descriptor", 
                   "atomic_formula", "term_list", "term", "function_comparison", 
                   "binary_comparison", "expression", "binary_operator", 
                   "effect", "c_effect", "conditional_effect", "p_effect", 
                   "assign_operator", "durative_action_def", "duration_constraint", 
                   "simple_duration_constraint", "duration_op", "durative_action_goal_descriptor", 
                   "timed_goal_descriptor", "time_specifier_prefix", "time_specifier", 
                   "durative_action_effect", "timed_effect", "function_assign_durative", 
                   "expression_durative", "assign_op_t", "expression_t", 
                   "derived_predicate_def", "problem", "object_declaration", 
                   "init", "init_element", "goal", "metric_spec", "optimization", 
                   "ground_function_expression", "variable", "name", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    VARIABLE=77
    NAME=78
    NUMBER=79
    COMMENT=80
    WS=81

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Pddl_fileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(pddl22Parser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(pddl22Parser.ProblemContext,0)


        def getRuleIndex(self):
            return pddl22Parser.RULE_pddl_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddl_file" ):
                listener.enterPddl_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddl_file" ):
                listener.exitPddl_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPddl_file" ):
                return visitor.visitPddl_file(self)
            else:
                return visitor.visitChildren(self)




    def pddl_file(self):

        localctx = pddl22Parser.Pddl_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddl_file)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(pddl22Parser.NameContext,0)


        def require_def(self):
            return self.getTypedRuleContext(pddl22Parser.Require_defContext,0)


        def types_def(self):
            return self.getTypedRuleContext(pddl22Parser.Types_defContext,0)


        def constants_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Constants_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Constants_defContext,i)


        def predicates_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Predicates_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Predicates_defContext,i)


        def functions_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Functions_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Functions_defContext,i)


        def action_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Action_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Action_defContext,i)


        def durative_action_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Durative_action_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Durative_action_defContext,i)


        def derived_predicate_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Derived_predicate_defContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Derived_predicate_defContext,i)


        def getRuleIndex(self):
            return pddl22Parser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = pddl22Parser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(pddl22Parser.T__0)
            self.state = 117
            self.match(pddl22Parser.T__1)
            self.state = 118
            self.match(pddl22Parser.T__2)
            self.state = 119
            self.name()
            self.state = 120
            self.match(pddl22Parser.T__3)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pddl22Parser.T__4:
                self.state = 121
                self.require_def()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pddl22Parser.T__23:
                self.state = 124
                self.types_def()


            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 130
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [pddl22Parser.T__26]:
                        self.state = 127
                        self.constants_def()
                        pass
                    elif token in [pddl22Parser.T__27]:
                        self.state = 128
                        self.predicates_def()
                        pass
                    elif token in [pddl22Parser.T__28]:
                        self.state = 129
                        self.functions_def()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 137 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 137
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [pddl22Parser.T__29]:
                        self.state = 134
                        self.action_def()
                        pass
                    elif token in [pddl22Parser.T__53]:
                        self.state = 135
                        self.durative_action_def()
                        pass
                    elif token in [pddl22Parser.T__66]:
                        self.state = 136
                        self.derived_predicate_def()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 139 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 141
            self.match(pddl22Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Require_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def require_key(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Require_keyContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Require_keyContext,i)


        def getRuleIndex(self):
            return pddl22Parser.RULE_require_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequire_def" ):
                listener.enterRequire_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequire_def" ):
                listener.exitRequire_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequire_def" ):
                return visitor.visitRequire_def(self)
            else:
                return visitor.visitChildren(self)




    def require_def(self):

        localctx = pddl22Parser.Require_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_require_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(pddl22Parser.T__4)
            self.state = 145 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 144
                self.require_key()
                self.state = 147 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pddl22Parser.T__5) | (1 << pddl22Parser.T__6) | (1 << pddl22Parser.T__7) | (1 << pddl22Parser.T__8) | (1 << pddl22Parser.T__9) | (1 << pddl22Parser.T__10) | (1 << pddl22Parser.T__11) | (1 << pddl22Parser.T__12) | (1 << pddl22Parser.T__13) | (1 << pddl22Parser.T__14) | (1 << pddl22Parser.T__15) | (1 << pddl22Parser.T__16) | (1 << pddl22Parser.T__17) | (1 << pddl22Parser.T__18) | (1 << pddl22Parser.T__19) | (1 << pddl22Parser.T__20) | (1 << pddl22Parser.T__21) | (1 << pddl22Parser.T__22))) != 0)):
                    break

            self.state = 149
            self.match(pddl22Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Require_keyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pddl22Parser.RULE_require_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequire_key" ):
                listener.enterRequire_key(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequire_key" ):
                listener.exitRequire_key(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequire_key" ):
                return visitor.visitRequire_key(self)
            else:
                return visitor.visitChildren(self)




    def require_key(self):

        localctx = pddl22Parser.Require_keyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_require_key)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pddl22Parser.T__5) | (1 << pddl22Parser.T__6) | (1 << pddl22Parser.T__7) | (1 << pddl22Parser.T__8) | (1 << pddl22Parser.T__9) | (1 << pddl22Parser.T__10) | (1 << pddl22Parser.T__11) | (1 << pddl22Parser.T__12) | (1 << pddl22Parser.T__13) | (1 << pddl22Parser.T__14) | (1 << pddl22Parser.T__15) | (1 << pddl22Parser.T__16) | (1 << pddl22Parser.T__17) | (1 << pddl22Parser.T__18) | (1 << pddl22Parser.T__19) | (1 << pddl22Parser.T__20) | (1 << pddl22Parser.T__21) | (1 << pddl22Parser.T__22))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Types_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_type_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.Typed_type_listContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.Typed_type_listContext,i)


        def untyped_type_list(self):
            return self.getTypedRuleContext(pddl22Parser.Untyped_type_listContext,0)


        def getRuleIndex(self):
            return pddl22Parser.RULE_types_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes_def" ):
                listener.enterTypes_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes_def" ):
                listener.exitTypes_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes_def" ):
                return visitor.visitTypes_def(self)
            else:
                return visitor.visitChildren(self)




    def types_def(self):

        localctx = pddl22Parser.Types_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_types_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(pddl22Parser.T__23)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 154
                    self.typed_type_list() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pddl22Parser.NAME:
                self.state = 160
                self.untyped_type_list()


            self.state = 163
            self.match(pddl22Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Untyped_type_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.NameContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.NameContext,i)


        def getRuleIndex(self):
            return pddl22Parser.RULE_untyped_type_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntyped_type_list" ):
                listener.enterUntyped_type_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntyped_type_list" ):
                listener.exitUntyped_type_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntyped_type_list" ):
                return visitor.visitUntyped_type_list(self)
            else:
                return visitor.visitChildren(self)




    def untyped_type_list(self):

        localctx = pddl22Parser.Untyped_type_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_untyped_type_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 165
                self.name()
                self.state = 168 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==pddl22Parser.NAME):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typed_type_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pddl_type(self):
            return self.getTypedRuleContext(pddl22Parser.Pddl_typeContext,0)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.NameContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.NameContext,i)


        def getRuleIndex(self):
            return pddl22Parser.RULE_typed_type_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyped_type_list" ):
                listener.enterTyped_type_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyped_type_list" ):
                listener.exitTyped_type_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyped_type_list" ):
                return visitor.visitTyped_type_list(self)
            else:
                return visitor.visitChildren(self)




    def typed_type_list(self):

        localctx = pddl22Parser.Typed_type_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typed_type_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 170
                self.name()
                self.state = 173 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==pddl22Parser.NAME):
                    break

            self.state = 175
            self.match(pddl22Parser.T__24)
            self.state = 176
            self.pddl_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pddl_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddl22Parser.NameContext)
            else:
                return self.getTypedRuleContext(pddl22Parser.NameContext,i)


        def getRuleIndex(self):
            return pddl22Parser.RULE_pddl_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddl_type" ):
                listener.enterPddl_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddl_type" ):
                listener.exitPddl_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPddl_type" ):
                return visitor.visitPddl_type(self)
            else:
                return visitor.visitChildren(self)




    def pddl_type(self):
